hot fix for StylingProfile removal